# FeelingWiseDev

./: .gitignore  App.tsx  CODEBASE_STATE_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
FeelingWise/: package-lock.json  types.ts
FeelingWise/components/: AboutTab.tsx  AnalyzeTab.tsx  ChildGamification.tsx  DeviceFrame.tsx  GuardianCard.tsx  PostCard.tsx
browser-extension/: README.md  background.js  localization.js  manifest.json  package.json
browser-extension/content-scripts/: common.js  facebook.js  severity.js  styles.css  twitter.js  youtube.js
browser-extension/locales/: en.json  ro.json
browser-extension/popup/: popup.html  popup.js  settings.js
browser-extension/tests/: severity.test.cjs
components/: AboutTab.tsx  AnalyzeTab.tsx  FeedTab.tsx  FirstRunWizard.tsx  IntroSequence.tsx  MessagesTab.tsx  SetupWizard.tsx  StatsTab.tsx
docs/: CLAUDE.md  TASK_QUEUE.md
docs/ALGORITHMS/: 01-technique-detection.md  02-severity-scoring.md  03-influence-calculation.md  05-neutralization.md
services/: gamificationService.ts  geminiService.ts  localAIService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  extension_bridge.rs  hardware.rs  lib.rs  ollama.rs  settings.rs  supervisor.rs
